--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "mtgox-bot",
+  "name": "mtgox-streaming-bot",
   "version": "0.0.0",
   "description": "'bot to play against mtgox'",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "mtgox",
+    "bot",
+    "trading",
+    "streaming",
+    "hft"
+  ],
   "author": "Stanislas Marion <stanislas.marion@gmail.com> (http://github.com/czzarr)",
   "license": "MIT",
   "dependencies": {
