--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mtgox-streaming-bot",
   "version": "0.0.0",
-  "description": "'bot to play against mtgox'",
+  "description": "Bot that acts on every message from MtGox socket.io API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
